force-app/main/default/objects/Contact/fields/Educational_Background__c.field-meta.xml
<CustomField>
    <fullName>Educational_Background__c</fullName>
    <description>The highest level of education you have attained (approximate the equivalent if you studied outside the U.S)</description>
    <label>Educational Background</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High school diploma or GED</fullName>
            </value>
            <value>
                <fullName>Associate Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;s degree</fullName>
            </value>
            <value>
                <fullName>Graduate degree (Master&apos;s, JD, Ph.D., MD)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>