force-app/main/default/objects/Contact/fields/employment_status__c.field-meta.xml
<CustomField>
    <fullName>employment_status__c</fullName>
    <label>Eemployment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed Full-Time</fullName>
            </value>
            <value>
                <fullName>Employed Part_Time</fullName>
            </value>
            <value>
                <fullName>Employed, Multiple jobs or side hustles</fullName>
            </value>
            <value>
                <fullName>Student Full-Time</fullName>
            </value>
            <value>
                <fullName>Not currently working or in school</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>