force-app/main/default/objects/Contact/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>