force-app/main/default/objects/Contact/fields/Salesforce_Experience__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Experience__c</fullName>
    <description>Experience/ awarness of salesforce as a potential career path</description>
    <label>Salesforce Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within the last 1 year</fullName>
            </value>
            <value>
                <fullName>1-4 years</fullName>
            </value>
            <value>
                <fullName>Over 5 years ago</fullName>
            </value>
            <value>
                <fullName>New to Salesforce</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>