force-app/main/default/objects/Contact/fields/TikTok__c.field-meta.xml
<CustomField>
    <fullName>TikTok__c</fullName>
    <label>TikTok</label>
    <type>Url</type>
</CustomField>