force-app/main/default/objects/Contact/fields/Trailhead__c.field-meta.xml
<CustomField>
    <fullName>Trailhead__c</fullName>
    <label>Trailhead</label>
    <type>Url</type>
</CustomField>