force-app/main/default/objects/Contact/fields/Type_of_Career_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Career_Assistance__c</fullName>
    <description>Type of carrier assistance requested by mentees.</description>
    <label>Career Assistance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resume /Cover Letter Review</fullName>
            </value>
            <value>
                <fullName>LinkedIn Review</fullName>
            </value>
            <value>
                <fullName>Mock Interview</fullName>
            </value>
            <value>
                <fullName>Informational Interview/</fullName>
            </value>
            <value>
                <fullName>Study Buddy/Study Group For Certification</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>