force-app/main/default/objects/Contact/fields/YouTube__c.field-meta.xml
<CustomField>
    <fullName>YouTube__c</fullName>
    <label>YouTube</label>
    <type>Url</type>
</CustomField>