force-app/main/default/objects/Contact/listViews/CH.listView-meta.xml
<ListView>
    <fullName>CH</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Interest__c</columns>
    <columns>Facebook__c</columns>
    <columns>LinkedIn__c</columns>
    <columns>Twitter__c</columns>
    <filterScope>Everything</filterScope>
    <label>Charise and Christines Mentees</label>
</ListView>